# holghol

./: .gitignore  CMakeLists.txt  README.md  build.c  holghol.h
src/: CHANGELOG  CREDITS  HEADER  LICENSE  ghol_core.c  ghol_files.c  ghol_utils.c  holghol.h
test/: test_holghol_h.c  test_utils.c
